# autojournalsummarizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.production  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  pre-commit.yml  test.yml
auth/: README.md
code/: Pipfile  main.py  retriever.py  sender.py  summary.py
docker/: Dockerfile  Dockerfile.dev
docker/entrypoints/: docker-setup.sh
entrypoints/: docker-entrypoint.sh  docker-setup.sh
prompts/: filter_prompt.txt  summarize_prompt.txt
settings/: auth_settings.yaml
src/autojournalsummarizer/: __init__.py  logging_config.py  main.py
src/autojournalsummarizer/config/: __init__.py  settings.py
src/autojournalsummarizer/models/: __init__.py  paper.py
src/autojournalsummarizer/services/: __init__.py  arxiv.py  factory.py  integrations.py  openai_service.py  utils.py  workflow.py
tests/: __init__.py  test_main.py
